aire-con-gas-Chlacker/src/objects/Token_Manager__c.object
<CustomObject>
    <fields>
        <fullName>Client_ID__c</fullName>
        <description>Service client Id</description>
        <label>Client ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <description>Name of API service being used</description>
        <label>Service Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <description>Oauth token for service</description>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Token Manager</label>
    <nameField>
        <displayFormat>TM-{0000}</displayFormat>
        <label>Token Manager Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Token Managers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>